# algorithm-x

./: CHANGELOG.md  LICENSE  README.md  algorithm-x.cabal
src/: AlgorithmX.hs  Demo.hs
