cabal-version:      2.4
name:               AlgorithmX
version:            0.1.0.0
synopsis:           A toy demo of Donald Knuth's Algorithm X
License:            BSD-3-Clause
License-file:       LICENSE
author:             Alexey Feigin
maintainer:         Alexey.Feigin@gmail.com
copyright:          (c) 2021 Alexey Feigin
category:           Algorithm
extra-source-files: CHANGELOG.md

library
    build-depends:    base ^>=4.16.0.0
    exposed-modules:  AlgorithmX
    hs-source-dirs:   src
    ghc-options:      -Wall -Wno-missing-signatures
    default-language: Haskell2010
    build-depends:    containers ^>=0.6.5.1, tabular ^>=0.2.2.8
